loader overflow fixed

--- a/Styles/style.scss
+++ b/Styles/style.scss
@@ -99,7 +99,7 @@ main {
         background-color: #0c0c0c;
         height: 100vh;
         width: 100%;
-        position: relative;
+        position: absolute;
         z-index: 1;
         overflow: hidden;
 
@@ -327,12 +327,6 @@ main {
         height: calc(100vh - 92px);
         position: relative;
         text-align: center;
-
-        .translate_div {
-            height: 100vh;
-            position: relative;
-            flex: 0 0 100%;
-        }
 
         .hero-div {
             position: absolute;
